
package laboratorio4_polimorfismo;

public interface ICalculadora {
    public double suma(double numero1,double numero2);
    public double resta(double numero1,double numero2);
    public double multiplicacion(double numero1,double numero2);
    public double division(double numero1,double numero2);
    public double raizCuad(double numero1);
}
